src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnloadableBundleClass_4/InvalidUnloadableBundleClass_4.php
<?php

namespace Invalid\UnloadableBundleClass_4;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class UnexpectedClassName
{
    /*
     * Unloadable because the class name doesn't
     * match the class file
     */
}